# ISA4RL

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  anothermain.py  build_configs.py  deucalion_diagnose_highway_env.sh  deucalion_run_highway_env.sh  evaluate.py  generate_configs.bash  isa.py  liacc_highway_env.sh  liacc_metadrive.sh  main.py  metafeatures.py  mia_highway_env_job_array.sh  mia_run_highway_env.sh  new_deucalion_highway_env.sh  output.txt  pyproject.toml  requirements.txt  run_config.py  run_generate_ranges.py  run_highway_env.sh  timestamp_helper.py  train.py  utils.py  windows.env  windows_highway_env.sh  windows_run_highway_env.sh
config/: algo-configs.json  algo-configurations.yaml  algo-presets.yaml  carla-algo-configs.json  check_size.py  configs.json  env-configs.json  env-configurations.yaml  eval_configs.json  highway-configs.json  instance_configs.json  merge-configs.json  obs-configs.json  roundabout-configs.json  train_configs.json
config/config-ranges/: observation-configurations.yaml
config/env-configs/: exit-configs.json  highway-configs.json  highway-fast-v0-configs.json  lane-keeping-configs.json  merge-configs.json  merge-generic-v0-configs.json  (+5 more)
helpers/: check_envs.sh  csv_to_latex_matrix.py  csv_to_latex_table.py  gen_everything.py  gen_everything.sh  generate_corr_fig.py  generate_feature_distribution_figures.py  generate_good_algos.py  generate_portfolio_figure.py  generate_ranges.py  generate_sources_fig.py  remove_untrained_result_folders.py  result_folders.sh  unclog_results.py
isa-options/: options-absolute-performance.json  options.json  options_auto_bounds.json  options_auto_bounds_different_location.json  options_auto_bounds_no_feature_bounding.json  options_k10.json  options_k10_auto_bounds.json  options_k10_no_sources_auto_bounds.json  options_k8_auto_bounds.json  options_k8_auto_bounds_different_location.json  options_k8_no_sources_auto_bounds.json  options_no_sources.json  web-options.json
src/: build_configs.py  build_isa_dataset.py  configs.py  evaluate.py  experiment.py  filter.py  fix_isa.py  instancespace_dataset.csv  isa.py  isa_dataset_analysis.py  main.py  metafeatures.py  modified_dataset.py  train.py  utils.py
src/carla_agents/: README.md  pyproject.toml  test_carla_min_ttc.py
src/carla_agents/src/carla_agents/: __init__.py  build_configs.py  gymdrive_adapter.py  main.py
src/highway_agents/: .env  build_configs.py  env_fixed_configs.py  find_surface.py  main.py  pyproject.toml  test_deepcopy.py  train_ars_experiment.py  train_parking_experiment.py  train_seed_consistency.py  train_tqc_experiment.py  visualize_baseline_idm_policy.py  visualize_lane_keeping_policy.py  visualize_parking_policy.py
src/isa/: build_isa_dataset.py  diagnose_random_vs_agents.py  filter_csv_by_source.py  fix_isa.py  isa.py  main.py  merge_csvs.py  merge_csvs_rowwise.py  metafeature_exclusions.py  pyproject.toml  remove_csv_columns.py  remove_domain_specific_metafeatures.py  replace_metadrive_source_with_map.py  replace_source_with_observation.py
src/isa/old/: build_isa_dataset.py  isa_dataset_analysis.py  modified_dataset.py
src/main/: .env  build_configs.py  configs.py  env_fixed_configs.py  evaluate.py  experiment_train.py  main.py  main_helpers.py  metafeatures.py  oldmetafeatures.py  pyproject.toml  train.py  utils.py
src/main/utils/: general_utils.py  group_utils.py  load_config_utils.py  sb3_utils.py
src/main/utils/metafeatures/: base_metric_hook.py  metrics.py  obs_metric_hook.py
src/metadrive_agents/: .gitignore  Dockerfile  build_configs.py  convert_svg_to_pdf.py  env_fixed_configs.py  generate_composed_map_svgs.py  human_run.py  main.py  pyproject.toml  test_baseline_density.py  test_image.py  visualize_idm_config_switch.py  visualize_map.py
src/methods/: configs.py  main_helpers.py  metafeatures.py  oldmetafeatures.py  pyproject.toml  train.py
src/methods/methods/: check.py  configs.py  evaluate.py  main.py  main_helpers.py  metafeatures.py  metafeatures2.py  train.py  veryoldmetafeatures.py
src/methods/methods/utils/: general_utils.py  group_utils.py  load_config_utils.py  metafeature_utils.py  sb3_utils.py
src/methods/methods/utils/metafeatures/: metrics.py  model_based.py  obs_metric_hook.py  other_vehicles_hook.py  pic_helper.py  pic_metafeature.py  simple_metric_hook.py
src/methods/tests/: test_simple_metric_hook.py
src/methods/utils/: general_utils.py  load_config_utils.py  metafeature_utils.py
src/methods/utils/metafeatures/: simple_metric_hook.py  step_info.py
(+227 files in other folders)
