[project]
name = "carla-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "carla>=0.9.16",
    "methods",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "pynput>=1.8.2",
    "tqdm>=4.67.3",
]

[project.scripts]
carla-agents = "carla_agents:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
methods = { path = "../methods", editable = true }
