[project]
name = "isa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instancespace",
    "common",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
instancespace = { path = "../../instancespace", editable = true }
