[project]
name = "agents-metadrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "metadrive",
    "methods",
    "datetime>=6.0",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "setuptools<70.0.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "cuda-python>=13.2.0",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyrr>=0.10.3",
    "glfw>=2.10.0",
    "cupy-cuda13x>=14.0.1",
]

[tool.uv.sources]
metadrive = { path = "../../metadrive", editable = true }
methods = { path = "../methods", editable = true }
