[project]
name = "agents-metadrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "metadrive",
    "methods",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyrr>=0.10.3",
    "glfw>=2.10.0",
]

[tool.uv.sources]
metadrive = { path = "../../metadrive", editable = true }
methods = { path = "../methods", editable = true }
